--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@strapi/plugin-users-permissions": "4.25.7",
     "@strapi/strapi": "4.25.7",
     "better-sqlite3": "8.6.0",
+    "pg": "^8.12.0",
+    "pg-connection-string": "^2.6.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
