--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
   "strapi": {
     "uuid": "bce28895-4cf2-4cce-82a5-601b4b18ec52"
   },
-  "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
-  },
+ "engines": {
+  "node": ">=18.17.0 <20.0.0",
+  "npm": ">=6.0.0"
+},
   "license": "MIT"
 }
