chore: specify node.js version

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "uuid": "bce28895-4cf2-4cce-82a5-601b4b18ec52"
   },
  "engines": {
-  "node": ">=18.17.0 <20.0.0",
-  "npm": ">=6.0.0"
+  "node": "18.17.0",
+  "npm": "^6.0.0"
 },
   "license": "MIT"
 }
