--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   "strapi": {
     "uuid": "bce28895-4cf2-4cce-82a5-601b4b18ec52"
   },
- "engines": {
-  "node": "18.17.0",
-  "npm": "^6.0.0"
-},
-  "license": "MIT"
+  "engines": {
+    "node": "18.17.0",
+    "npm": "^6.0.0"
+  },
+  "license": "MIT",
+  "volta": {
+    "node": "18.17.0"
+  }
 }
