--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "deploy": "strapi deploy"
+    "deploy": "strapi deploy",
+    "test": "echo \"No test specified\""
   },
   "devDependencies": {},
   "dependencies": {
